--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
